kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-app
  namespace: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: wiki
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: wiki
        image: ambrosiaaaaa/wiki:v0.0.4
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: wiki-data
          mountPath: /data
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: wiki-data
        persistentVolumeClaim:
          claimName: wiki-data
