kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-service
  namespace: wiki
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: wiki
  sessionAffinity: None
  type: ClusterIP
