kustomize/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: wiki-route
spec:
  parentRefs:
  - name: gateway
    namespace: default      
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /wiki
    backendRefs:
    - name: wiki-service
      port: 80
